--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="author" content="Graham Hannington"/>
 <meta name="description" content="Displays text as big as possible"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="mobile-web-app-capable" content="yes"/>
 <script src="script.js"></script>
 <link href="style.css" rel="stylesheet"/>
 </head>
