--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <meta name="author" content="Graham Hannington"/>
 <meta name="description" content="Displays text as big as possible"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<meta name="mobile-web-app-capable" content="yes"/>
-<script src="script.js"></script>
+<script type="module">
+import * as BigAs from "./bigas.js"
+BigAs.formatSVGElementById('svg', true)
+</script>
 <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
