--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="author" content="Graham Hannington"/>
 <meta name="description" content="Displays text as big as possible"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link href="images/favicon.ico" rel="shortcut icon"/>
 <script type="module">
 import * as BigAs from "./bigas.js"
 BigAs.formatSVGElementById('svg', true)
