--- a/examples/burger.html
+++ b/examples/burger.html
@@ -3,6 +3,7 @@
 <head>
 <title>Burger</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link href="../images/favicon.ico" rel="shortcut icon"/>
 <script type="module">
 import * as BigAs from "../bigas.js"
 BigAs.formatSVGElementsByClassName('bigas')
