Multi-page text with support for touch devices (swipe left/right to page forward/back)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link href="images/favicon.ico" rel="shortcut icon"/>
 <script type="module">
 import * as BigAs from "./bigas.js"
-BigAs.formatSVGElementById('svg', true)
+BigAs.setStateFromURLParams()
+BigAs.formatSVGElementById('svg')
 </script>
 <link href="style.css" rel="stylesheet"/>
 </head>
