Added meta tag to index.html mainly to see if this would trigger a GitHub Pages site update

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Big As</title>
+<meta charset="utf-8"/>
 <meta name="author" content="Graham Hannington"/>
 <meta name="description" content="Displays text as big as possible"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
