--- a/examples/feed-me-pizza.html
+++ b/examples/feed-me-pizza.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Burger</title>
+<meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link href="../images/favicon.ico" rel="shortcut icon"/>
 <script type="module">
