Add information button (infoButton=true|false, default true)

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@ BigAs.formatSVGElementById('svg')
 <svg id="svg">
 </svg>
 </div>
+<div id="info">
+<a href="https://github.com/GrahamHannington/bigas" title="Powered by Big As">&#x1F6C8;</a>
+</div>
 </body>
 </html>
