Change the information button from a character to an SVG image (the Unicode character displayed as tofu on my old phone!)

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@ BigAs.formatSVGElementById('svg')
 <svg id="svg">
 </svg>
 </div>
-<div id="info">
-<a href="https://github.com/GrahamHannington/bigas" title="Powered by Big As">&#x1F6C8;</a>
-</div>
+<div id="info"><a href="https://github.com/GrahamHannington/bigas" title="Powered by Big As"><img src="images/info-icon.svg" style="width: 1.6em; height: 1.6em;"/></a></div>
 </body>
 </html>
