--- a/examples/multiplication/index.html
+++ b/examples/multiplication/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<title>Burger</title>
+<title>Multiplication tables</title>
+<link href="../../images/favicon.ico" rel="shortcut icon"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<link href="../images/favicon.ico" rel="shortcut icon"/>
 <script type="module">
 import * as Multiplication from "./modules/multiplication.js"
 Multiplication.init()
@@ -38,6 +38,7 @@ Multiplication.init()
   }
   
   .tables .table {
+    user-select: none;
     padding: 1rem;
     border: 0;
     transition: border-color 0.5s;
